build_errors_v10.txt
warning: use of deprecated method `cpal::traits::DeviceTrait::name`: Use `description()` for comprehensive device information including name, manufacturer, and device type. Use `id()` for a unique, stable device identifier that persists across reboots and reconnections.
 --> src\audio\device.rs:4:12
  |
4 |     device.name().ok()
  |            ^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:170:16
    |
170 |             ui.allocate_ui_at_rect(folder_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:181:16
    |
181 |             ui.allocate_ui_at_rect(drop_targets_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::audio::Source`
 --> src\analysis\audio_decode.rs:4:5
  |
4 | use crate::audio::Source;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `byte_len`
  --> src\analysis\audio\decode_io.rs:48:9
   |
48 |     let byte_len = file.metadata().map(|meta| meta.len()).unwrap_or(0) as u64;
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_byte_len`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\audio\player\playback.rs:54:13
   |
54 |         let mut source = decoder_from_bytes(bytes)?;
   |             ----^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `fade`
   --> src\audio\player\playback.rs:251:13
    |
251 |         let fade = fade_duration(aligned_span_sec, self.anti_clip_fade());
    |             ^^^^ help: if this is intentional, prefix it with an underscore: `_fade`

warning: variable does not need to be mutable
  --> src\audio\decoder.rs:36:13
   |
36 |         let mut reader = probed.format;
   |             ----^^^^^^
   |             |
   |             help: remove this `mut`

warning: variable does not need to be mutable
  --> src\egui_app\ui\sources_panel\mod.rs:86:17
   |
86 |             let mut drop_targets_height = self
   |                 ----^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 help: remove this `mut`

warning: variable does not need to be mutable
  --> src\http_client.rs:69:9
   |
69 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> src\http_client.rs:89:9
   |
89 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: unused variable: `dir`
   --> src\issue_gateway\token_store.rs:501:20
    |
501 | fn sync_parent_dir(dir: &Path) -> Result<(), IssueTokenStoreError> {
    |                    ^^^ help: if this is intentional, prefix it with an underscore: `_dir`

warning: variable does not need to be mutable
   --> src\wav_sanitize.rs:186:9
    |
186 |     let mut changed = false;
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src\waveform\mod.rs:383:9
    |
383 |     let mut file = std::fs::File::open(path).map_err(|source| WaveformLoadE...
    |         ----^^^^
    |         |
    |         help: remove this `mut`

warning: function `save_legacy_id_map` is never used
  --> src\analysis\ann_index\storage.rs:85:15
   |
85 | pub(crate) fn save_legacy_id_map(path: &Path, id_map: &[String]) -> Result<(...
   |               ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: method `restart` is never used
   --> src\egui_app\controller\library\analysis_jobs\pool\mod.rs:195:19
    |
 40 | impl AnalysisWorkerPool {
    | ----------------------- method in this implementation
...
195 |     pub(crate) fn restart(
    |                   ^^^^^^^

warning: methods `apply_pending_backend_switch` and `analysis_jobs_active` are never used
   --> src\egui_app\controller\library\analysis_options.rs:195:19
    |
 31 | impl EguiController {
    | ------------------- methods in this implementation
...
195 |     pub(crate) fn apply_pending_backend_switch(&mut self) -> bool {
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
206 |     fn analysis_jobs_active(&self) -> bool {
    |        ^^^^^^^^^^^^^^^^^^^^

warning: field `channels` is never read
  --> src\egui_app\controller\state\audio.rs:89:16
   |
82 | pub(crate) struct LoadedAudio {
   |                   ----------- field in this struct
...
89 |     pub(crate) channels: u16,
   |                ^^^^^^^^
   |
   = note: `LoadedAudio` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

warning: error finalizing incremental compilation session directory `\\?\X:\sempal\target\debug\incremental\sempal-3dzgg8ub17cv7\s-her7ke0d9b-0x12qq2-working`: Access is denied. (os error 5)

warning: `sempal` (lib) generated 19 warnings (run `cargo fix --lib -p sempal` to apply 10 suggestions)
    Checking sempal v9.0.0 (X:\sempal)
warning: unused variable: `channels`
  --> tests\repro_duration.rs:68:13
   |
68 |         let channels = 2; // Stereo
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_channels`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `needed_nanos`
   --> tests\repro_duration.rs:105:13
    |
105 |         let needed_nanos = ((1.0f64 / 44100.0f64) * 1_000_000_000.0f64).cei...
    |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_needed_nanos`

warning: `sempal` (test "repro_duration") generated 2 warnings (run `cargo fix --test "repro_duration" -p sempal` to apply 2 suggestions)
warning: unused import: `std::net::TcpListener`
   --> src\issue_gateway\api.rs:329:9
    |
329 |     use std::net::TcpListener;
    |         ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Arc` and `Mutex`
   --> src\issue_gateway\api.rs:330:21
    |
330 |     use std::sync::{Arc, Mutex};
    |                     ^^^  ^^^^^

warning: unused import: `std::thread`
   --> src\issue_gateway\api.rs:331:9
    |
331 |     use std::thread;
    |         ^^^^^^^^^^^

warning: unused import: `std::fs`
 --> src\sample_sources\library\tests.rs:4:5
  |
4 | use std::fs;
  |     ^^^^^^^

warning: unused import: `crate::audio::Source`
 --> src\analysis\audio_decode.rs:4:5
  |
4 | use crate::audio::Source;
  |     ^^^^^^^^^^^^^^^^^^^^

error[E0596]: cannot borrow `source` as mutable, as it is not declared as mutable
   --> src\audio\player\helpers.rs:144:9
    |
144 |         source
    |         ^^^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
143 |         let mut source = decoder_from_bytes(bytes)?;
    |             +++

warning: variable does not need to be mutable
   --> src\waveform\mod.rs:383:9
    |
383 |     let mut file = std::fs::File::open(path).map_err(|source| WaveformLoadError::Read {
    |         ----^^^^
    |         |
    |         help: remove this `mut`

For more information about this error, try `rustc --explain E0596`.
warning: `sempal` (lib test) generated 18 warnings (12 duplicates)
error: could not compile `sempal` (lib test) due to 1 previous error; 18 warnings emitted
